# OpenTracing-Shim-in-OpenTelemetry

./: demo.py  main.py  pyproject.toml
